--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,6 +2,7 @@ use_frameworks!
 
 target 'SwiftUIDebug_Example' do
   pod 'SwiftUIDebug', :path => '../'
+  pod 
 
   target 'SwiftUIDebug_Tests' do
     inherit! :search_paths
